fixed context paths; can execute commands

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+*sh
 .gradle/
 .idea/
 build/
@@ -28,3 +29,11 @@ local.properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+.gitignore
+WebContent/
+build.gradle
+classes/
+gradlew
+gradlew.bat
+out/
+shellshock.iml
