--- a/build.gradle
+++ b/build.gradle
@@ -54,6 +54,8 @@ sourceSets {
 dependencies {
     providedCompile "javax.servlet:javax.servlet-api:3.0.1"
     compile 'javax.servlet:jstl:1.2'
+    compile 'org.apache.commons:commons-io:1.3.2'
+    compile group: 'commons-fileupload', name: 'commons-fileupload', version: '1.3.1'
 
 //    def tomcatVersion = '7.0.57'
 //    tomcat "org.apache.tomcat.embed:tomcat-embed-core:${tomcatVersion}",
