--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -42,6 +42,15 @@
     </servlet-mapping>
 
 
+    <servlet>
+        <servlet-name>download</servlet-name>
+        <servlet-class>com.shellshock.servlet.DownloadServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>download</servlet-name>
+        <url-pattern>/download</url-pattern>
+    </servlet-mapping>
+
 
     <welcome-file-list>
         <welcome-file>shellshock</welcome-file>
